--- a/src/scss/core/_index.scss
+++ b/src/scss/core/_index.scss
@@ -1,3 +1,17 @@
-* {
-  background-color: pink;
+.main {
+  height: 100vh;
+  width: 100%;
+  padding: 400px;
+  background-color: lightcoral;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.div-style {
+  display: inline-block;
+  border: 3px solid grey;
+  background-color: lightpink;
+  margin-top: 20px;
 }
