--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box;margin:0;padding:0}*{background-color:pink}
+*{box-sizing:border-box;margin:0;padding:0}.main{height:100vh;width:100%;padding:400px;background-color:lightcoral;text-align:center;display:flex;flex-direction:column;justify-content:center}.div-style{display:inline-block;border:3px solid grey;background-color:lightpink;margin-top:20px}
